src/less/showcase.less
// Budgie Showcase

// #region Directional Specific

body {
	&:not([dir="rtl"]) { // LTR
		div[data-budgie-component="showcase-list"] { // Showcase List	
			& > div[data-budgie-component="showcase-item"] { // Showcase Item
				margin: 1.5% 2.5% e("calc(1% + 16px)") 16px; // Have roughly 2.5% around, account for 16px offset for fancy icon thing
			}
		}
	}

	&[dir="rtl"] { // RTL
		div[data-budgie-component="showcase-list"] { // Showcase List
			& > div[data-budgie-component="showcase-item"] { // Showcase Item
				margin: 1.5% 16px e("calc(1% + 16px)") 2.5%; // Have roughly 2.5% around, account for 16px offset for fancy icon thing
			}
		}
	}
}

// #endregion

div[data-budgie-component="showcase-list"] { // Showcase List
	.fullWidth;
	display: inline-flex;
	display: -webkit-inline-flex;
	flex-wrap: wrap;

	& > div[data-budgie-component="showcase-item"] { // Showcase Item
		// #region Scaling

		@media screen and (max-width: 1023px) { // Mobile
			width: 100%;
		}

		@media screen and (min-width: 1024px) { // Non-Mobile
			min-width: 350px; // Ensure flexbox enforces 350px width
			width: 350px;
		}

		// #endregion

		height: 150px;
		background-color: #fafafa;

		@border: e("2px solid #eeeeee");
		border-top: @border;
		border-left: @border;
		border-right: @border;
		box-shadow: 0 4px 4px 0 #eeeeee; // 0 x offset, 4px y offset, 4px blur, no spread.

		& > div[data-budgie-icon] { // Icon
			height: 32px;
			width: 32px;
			border-radius: 32px;
			position: absolute;
			margin: -16px;
		}

		& > div[data-budgie-component="showcase-item-info"] { // Info
			height: 80px;
			width: e("calc(100% - 40px)");
			padding: 15px 20px;

			& > b { // Name
				font-size: 1.2em;
				font-weight: normal;
			}

			& > p { // Description
				margin: 10px 0;
			}
		}

		& > div[data-budgie-component="showcase-item-links"] {
			height: 40px;
			width: e("calc(100% - 40px)");
			font-size: 1.1em;
			line-height: 40px;
			border-top: 2px solid #eeeeee;
			padding: 0 20px;
		}
	}
}

